--- a/NEBULOUS/appsettings.json
+++ b/NEBULOUS/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "connection_sql": "Server=DESKTOP-76NBD2Q\\SQLEXPRESS;Database=NEBULOUS;User Id=root;Password=root;"
+  }
 }
