--- a/NEBULOUS/NEBULOUS.csproj
+++ b/NEBULOUS/NEBULOUS.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Controllers\Routs\Get\Supplier\" />
+    <Folder Include="Controllers\Routs\Post\Supplier\" />
     <Folder Include="Tools\" />
   </ItemGroup>
 
