Re-Estructura de carpetas

--- a/NEBULOUS/NEBULOUS.csproj
+++ b/NEBULOUS/NEBULOUS.csproj
@@ -17,4 +17,25 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\Routs\Get\Operation\OperationDetails\" />
+    <Folder Include="Controllers\Routs\Get\Operation\Operation\" />
+    <Folder Include="Controllers\Routs\Get\Product\ProductBrands\" />
+    <Folder Include="Controllers\Routs\Get\Product\ProductCategory\" />
+    <Folder Include="Controllers\Routs\Get\Product\ProductSubCategory\" />
+    <Folder Include="Controllers\Routs\Get\Product\Product\" />
+    <Folder Include="Controllers\Routs\Post\Operation\OperationDetails\" />
+    <Folder Include="Controllers\Routs\Post\Operation\Operation\" />
+    <Folder Include="Controllers\Routs\Post\Product\ProductBrands\" />
+    <Folder Include="Controllers\Routs\Post\Product\ProductCategory\" />
+    <Folder Include="Controllers\Routs\Post\Product\ProductSubCategory\" />
+    <Folder Include="Controllers\Routs\Post\Product\Product\" />
+    <Folder Include="Logic\Operation\OperationDetails\" />
+    <Folder Include="Logic\Operation\Operation\" />
+    <Folder Include="Logic\Product\ProductBrands\" />
+    <Folder Include="Logic\Product\ProductSubCategory\" />
+    <Folder Include="Logic\Product\ProductCategory\" />
+    <Folder Include="Logic\Product\Product\" />
+  </ItemGroup>
+
 </Project>
