--- a/NEBULOUS/appsettings.json
+++ b/NEBULOUS/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "connection_sql": "Server=DESKTOP-76NBD2Q\\SQLEXPRESS;Database=NEBULOUS;User Id=root;Password=root;"
+    "connection_sql": "Server=luisito;Database=NEBULOUS;Integrated Security=true;"
   }
 }
