Corrección de errores.

--- a/NEBULOUS/appsettings.json
+++ b/NEBULOUS/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "connection_sql": "Server=HECTOR\\SQLEXPRESS;Database=NEBULOUS;Integrated Security=true;"
+    "connection_sql": "Server=luisito;Database=NEBULOUS;Integrated Security=true;"
   }
 }
